<resources>
    <string name="app_name">WIMMG</string>
    <string name="title_name">Name</string>
    <string name="title_category">Category</string>
    <string name="string_date_format">dd-mm-yyyy</string>
    <string name="title_time_bought">Time Bought.</string>
    <string name="string_time_format">hh-mm</string>
    <string name="string_income">INCOME</string>
    <string name="title_spending">Spending</string>
    <string name="string_day">Day</string>
    <string name="string_week">Week</string>
    <string name="string_month">Month</string>
    <string name="string_year">Year</string>
    <string name="how_much_was_bought">How much was bought?</string>
    <string name="title_profile">Profile</string>
    <string name="title_budget">Budget</string>


    <!--Taken from https://www.financiallyfitandfab.com/budget-categories/-->
    <array name="budget_categories">
        <item name="education">Education</item>
        <item name="personal_care">Personal Care</item>
        <item name="entertainment">Entertainment</item>
        <item name="food">Food</item>
        <item name="giving">Giving</item>
        <item name="housing">Housing</item>
        <item name="insurance">Insurance</item>
        <item name="medical">Medical</item>
        <item name="transportation">Transportation</item>
        <item name="savings">Saving</item>
        <item name="utilities">Utilities</item>
    </array>




</resources>
