<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edit_text_name"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_name" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edit_text_cost"
            style="@style/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cost"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            style="@style/text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="Date Bought." />

        <TextView
            android:id="@+id/text_date_bought"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@android:drawable/divider_horizontal_dim_dark"
            android:gravity="center"
            android:text="@string/string_date_format" />
    </LinearLayout>


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            style="@style/text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/title_time_bought" />

        <TextView
            android:id="@+id/text_time_bought"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@android:drawable/divider_horizontal_dim_dark"
            android:gravity="center"
            android:text="@string/string_time_format" />
    </LinearLayout>


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin_small"
        android:layout_marginTop="@dimen/content_margin_small"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/title_category" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin_small"
            android:layout_marginStart="@dimen/content_margin_small"
            android:visibility="visible" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/how_much_was_bought" />


        <nl.dionsegijn.steppertouch.StepperTouch
            android:id="@+id/stepper_amount"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/content_margin_small"
            app:stepperBackgroundColor="@color/colorAccent">

        </nl.dionsegijn.steppertouch.StepperTouch>

    </LinearLayout>


</LinearLayout>